fix ui bug and rm logs

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,8 +42,9 @@ a {
   min-width: var(--min-width);
   margin: 0 auto;
 }
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@media (min-width: 600px) {
+  .main{
+    padding: 20px;
   }
+
 }
